# Z16-ISA-Disassembler-Simulator

./: .gitignore  CMakeLists.txt  README.md  build.zig
docs/: CHANGELOG.md  README.md
src/: CMakeLists.txt  main.cpp
src/executor/: Executor.cpp  Executor.h
src/logger/: Logger.cpp  Logger.h
tests/: CMakeLists.txt  disassembler_test.cpp  main_test.cpp
tests/test_cases/test_04/: test_04.asm
tests/test_cases/test_05/: test_05.asm
tests/test_cases/test_06/: test_06.asm
tests/test_cases/test_07/: test_07.asm
tests/test_cases/test_08/: test_08.asm
tests/test_cases/test_09/: test_09.asm
tests/test_cases/test_10/: test_10.asm
tests/test_cases/test_12/: test_12.asm
tests/test_cases/test_15/: test_15.asm
